# MealAgent_Project

./: .ai-devkit.json  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  User‑centric Use Cases — Meal Planning Agent (v4).md  analyze_poor_results.py  resources.txt  test_cases_chatbot.json
MealAgent/: README.md  pyproject.toml
MealAgent/docs/: DATA_PIPELINE.md  PLAN_DAY_WORKFLOW.md
MealAgent/etl/: ingest_fdc.py
MealAgent/migrations/: add_mealagent_hardening_fields.py  add_role_migration.py  create_collections.py  promote_all_to_admin.py
MealAgent/preprocessing/: preprocessor.py
MealAgent/schemas/: __init__.py  fdc_portion.py  llm_draft.py  meal_log_entry.py  meal_plan.py  pantry.py  recipe.py  recipe_submission.py  shopping.py  user_account.py  user_profile.py
MealAgent/scripts/: README.md  __init__.py  export_weaviate_collections.py  precompute_recipe_macros.py  validate_recipe_macros.py
MealAgent/tools/: TOOLS_DOCUMENTATION.md
MealAgent/tools/constraints/: __init__.py  constraints_guard.py
MealAgent/tools/cook_mode/: __init__.py  cook_mode.py
MealAgent/tools/gap_fill/: __init__.py  apply_snack.py  gap_calc.py  gap_fill.py  suggest_snack.py
MealAgent/tools/meal_logging/: __init__.py  accept_plan.py  log_meal_e2e.py  meal_history.py  meal_parser.py  profile_update.py
MealAgent/tools/micros/: __init__.py  micros.py  suggest_micros_foods.py
MealAgent/tools/nutrition/: __init__.py  auto_calculate_macros.py  calculate_recipe_macros.py
MealAgent/tree/: __init__.py  config.py  meal_tree.py
MealAgent/utils/: nutrition.py
(+298 files in other folders)
