[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MealAgent"
version = "0.1.0"
description = "Meal planning agent tools for Elysia"
authors = [{ name = "MealAgent Dev Team" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "elysia-ai>=0.3.dev1",
    "weaviate-client>=4.16.7",
    "dspy-ai>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools]
package-dir = {"MealAgent" = "."}
packages = ["MealAgent"]
